// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action render() should render a warning about potential page deactivation in Facebook 1`] = `
<div
  class="Action d-flex align-items-baseline"
>
  <div>
    ActionSelect
  </div>
  <span
    class="alert-warning wrapper"
  >
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </span>
</div>
`;

exports[`Action render() should render a warning about potential page deactivation in Facebook 2`] = `
<div
  class="Action d-flex align-items-baseline"
>
  <div>
    ActionSelect
  </div>
  <span
    class="alert-warning wrapper"
  >
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </span>
</div>
`;

exports[`Action render() should render a warning regarding team assignment 1`] = `
<div
  class="Action d-flex align-items-baseline"
>
  <div>
    ActionSelect
  </div>
  <span
    class="compactAction compact-action"
  >
    <div />
  </span>
  <span
    class="alert-warning wrapper"
  >
    To set up team auto-assignment, go to the
     
    <a
      to="/app/automation/ticket-assignment"
    >
      Ticket assignment
    </a>
     page
  </span>
</div>
`;

exports[`Action render() should render an error saying an action cannot be empty 1`] = `
<div
  class="Action"
>
  <div>
    ActionSelect
  </div>
  <div
    class="d-inline-block text-danger ml-2"
  >
    An action cannot be empty
  </div>
</div>
`;
